* upgrade graphql-java version to 13.0 * replace custom NullValue with graphql.language.NullValue (DataFetcher)
Deprecated in 13.0
* Replace new GraphQLScalarType with newScalar Builder
* use Field.transform to change arguments (all field properties are immutable)
* replace DataFetchingEnvironmentBuilder with DataFetchingEnvironmentImpl (graphql internal class!)
* variables have been moved from DataFetchingEnvironment.Environment directly to DataFetchingEnvironment.variables